Add SDF support.
- Ported ION's SDF implementation.
  https://github.com/google/ion/blob/master/ion/text/sdfutils.cc
- Add APIs to control SDF generation.
  EnableTextSDF(), SetTextOuterColor()
- Add a sample to demonstrate the SDF feature.
- Applied clang-format.
- This version's API is not providing an API using inner SDF.
  Need some more researches how we can utilize the feature.

Tested: on OSX, and Android.
Change-Id: Ib43232302771da705f67a895cdcffed619e32126

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ set(flatui_SRCS
     include/flatui/flatui.h
     include/flatui/flatui_common.h
     include/flatui/font_manager.h
+    include/flatui/internal/distance_computer.h
     include/flatui/internal/glyph_cache.h
     include/flatui/internal/flatui_util.h
     include/flatui/internal/flatui_layout.h
