Added cmake common function to remove duplicated code in CMakefiles.txt files    set_common_build_variables() Tested: Mac OS
Change-Id: Id4f190dd49bd1e29a8b1b4dd7aa4c1b9e73945c7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,44 +25,27 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 # Temporary files (like object files) created while compiling projects.
 set(tmp_dir ${CMAKE_CURRENT_BINARY_DIR}/obj)
 
-# Directory which contains the source for 3rd party libraries.
-get_filename_component(
-    third_party_root "${CMAKE_CURRENT_LIST_DIR}/../../../../external" REALPATH)
-
-# Directory which contains source for FPL libraries.
-get_filename_component(
-    fpl_root "${CMAKE_CURRENT_LIST_DIR}/../../libs" REALPATH)
-
-# If the dependencies directory exists, assume this is the root directory for
-# all libraries required by this project.
-set(dependencies_root "${CMAKE_CURRENT_SOURCE_DIR}/dependencies" CACHE PATH
-    "Root directory for dependencies")
-if(EXISTS "${dependencies_root}")
-  set(third_party_root "${dependencies_root}")
-  set(fpl_root "${dependencies_root}")
+# Configurable locations of dependencies of this project.
+if(NOT DEFINED fpl_root)
+  get_filename_component(fpl_root "${CMAKE_CURRENT_LIST_DIR}/../../libs"
+       REALPATH)
+  if(NOT EXISTS "${fpl_root}")
+    set(fpl_root "${CMAKE_CURRENT_SOURCE_DIR}/dependencies")
+  endif ()
 endif()
 
-# Configurable locations of dependencies of this project.
-set(dependencies_flatui_dir "${CMAKE_CURRENT_LIST_DIR}"
-    CACHE PATH "Directory containing the FlatUI library.")
-set(dependencies_mathfu_dir "${fpl_root}/mathfu"
-    CACHE PATH "Directory containing the MathFu library.")
-set(dependencies_fplbase_dir "${fpl_root}/fplbase"
-    CACHE PATH "Directory containing the FPLBase library.")
+# Extra MSVC compile flags
+#    wd4316: object allocated on the heap may not be aligned for required type
+#            in glyph_cache.h
+include (${fpl_root}/fplutil/buildutil/cmake_common.txt)
+set_common_build_variables("/wd4316")
+
 set(dependencies_harfbuzz_cmake_dir "${CMAKE_MODULE_PATH}/harfbuzz"
     CACHE PATH "Directory containing the harfbuzz cmake project.")
-set(dependencies_harfbuzz_distr_dir "${third_party_root}/harfbuzz"
-    CACHE PATH "Directory containing the harfbuzz library.")
 set(dependencies_freetype_cmake_dir "${CMAKE_MODULE_PATH}/freetype"
     CACHE PATH "Directory containing the freetype cmake project.")
-set(dependencies_freetype_distr_dir "${third_party_root}/freetype"
-    CACHE PATH "Directory containing the freetype library.")
 set(dependencies_libunibreak_cmake_dir "${CMAKE_MODULE_PATH}/libunibreak"
     CACHE PATH "Directory containing the libunibreak cmake project.")
-set(dependencies_libunibreak_distr_dir "${third_party_root}/libunibreak"
-    CACHE PATH "Directory containing the libunibreak library.")
-set(dependencies_sdl_dir "${third_party_root}/sdl"
-    CACHE PATH "Directory containing the SDL library.")
 
 set(flatui_standalone_mode OFF)
 if("${CMAKE_CURRENT_LIST_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
@@ -95,14 +78,20 @@ add_subdirectory(${dependencies_mathfu_dir} ${tmp_dir}/mathfu)
 
 # Include harfbuzz, freetype and libunibreak.
 if(NOT TARGET harfbuzz)
+  set_compiler_flags_for_external_libraries()
   add_subdirectory("${dependencies_harfbuzz_cmake_dir}" ${tmp_dir}/harfbuzz)
+  restore_compiler_flags()
 endif()
 if(NOT TARGET freetype)
+  set_compiler_flags_for_external_libraries()
   add_subdirectory("${dependencies_freetype_cmake_dir}" ${tmp_dir}/freetype)
+  restore_compiler_flags()
 endif()
 if(NOT TARGET libunibreak)
+  set_compiler_flags_for_external_libraries()
   add_subdirectory("${dependencies_libunibreak_cmake_dir}"
     ${tmp_dir}/libunibreak)
+  restore_compiler_flags()
 endif()
 if(flatui_build_tests OR flatui_build_samples)
 # Add FPLbase
@@ -152,28 +141,6 @@ include_directories(${dependencies_freetype_distr_dir}/include)
 
 # libunibreak includes.
 include_directories(${dependencies_libunibreak_distr_dir}/src)
-
-# Detect clang
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
-  set(CMAKE_COMPILER_IS_CLANGXX 1)
-endif()
-
-# Compiler flags.
-set(C_FLAGS_WARNINGS "")
-if(MSVC)
-  # warning C4503: decorated name length exceeded, name was truncated
-  set(C_FLAGS_WARNINGS "/W4 /WX /wd4065 /wd4355 /wd4503 /wd4316")
-  set(CMAKE_CXX_FLAGS "/MP")
-  add_definitions(-DNOMINMAX -D_HAS_EXCEPTIONS=0 -D_CRT_SECURE_NO_WARNINGS)
-elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
-       CMAKE_COMPILER_IS_CLANGXX)
-  add_definitions(-g)
-  set(CMAKE_CXX_FLAGS
-    "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -pedantic -Werror -Wextra -Wno-unused-function")
-  # -Wno-unused-function is because of webp encode.h
-endif()
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS_WARNINGS}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C_FLAGS_WARNINGS}")
 
 if(flatui_DEBUG)
   # if we want to define this, it needs to be only in debug builds
