Factored out the layout algorithm into its own class.
Change-Id: I69b8844344d0eaf302ea34b125e93c5c246e5b88
Tested: on Linux.
Bug: 27249923.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ set(flatui_SRCS
     include/flatui/font_manager.h
     include/flatui/internal/glyph_cache.h
     include/flatui/internal/flatui_util.h
+    include/flatui/internal/flatui_layout.h
     include/flatui/internal/hb_complex_font.h
     include/flatui/internal/micro_edit.h
     include/flatui/version.h
