--- a/sample/sample_3d/AndroidManifest.xml
+++ b/sample/sample_3d/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2015 Google Inc. All rights reserved.
+<!-- Copyright 2016 Google Inc. All rights reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.google.flatui.sample"
+          package="com.google.flatui.sample.sample3d"
           android:versionCode="1"
           android:versionName="1.0">
   <application android:label="@string/app_name"
