Added missing fplbase linker dependency.
Change-Id: I5e928e42c8886b0b7a7249fbf3ebb6c02ba5ebbf
Tested: on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,7 @@ add_dependencies(flatui flatui_generated_includes)
 add_dependencies(flatui fplbase_generated_includes)
 
 # Dependencies to libraries.
-target_link_libraries(flatui libfreetype libharfbuzz libunibreak)
+target_link_libraries(flatui fplbase libfreetype libharfbuzz libunibreak)
 
 # Additional flags for the target.
 mathfu_configure_flags(flatui)
