--- a/cmake/freetype/CMakeLists.txt
+++ b/cmake/freetype/CMakeLists.txt
@@ -19,9 +19,23 @@ set(freetype_dir ${dependencies_freetype_distr_dir})
 
 # Include freetype header files.
 include_directories(${freetype_dir}/include)
+include_directories(${dependencies_freetype_cmake_dir})
+
+# Include harfbuzz header files used by FT_CONFIG_OPTION_USE_HARFBUZZ.
+include_directories(${dependencies_harfbuzz_distr_dir}/src)
+include_directories(${dependencies_flatui_dir}/external/include/harfbuzz)
+
+# Include libpng to stbimage header file used by FT_CONFIG_OPTION_USE_PNG.
+include_directories(${dependencies_flatui_dir}/src/libpng_to_stbimage)
 
 # Add definition to build library
 add_definitions(-DFT2_BUILD_LIBRARY)
+
+# Enable use of libpng for a color font decompression.
+add_definitions(-DFT_CONFIG_OPTION_USE_PNG)
+
+# Enable use of harfbuzz to extract better kerning info.
+add_definitions(-DFT_CONFIG_OPTION_USE_HARFBUZZ)
 
 # Including freetype source files.
 # Note that it includes top level .c module files
