Initial implementation of a system font load support.
- macOS/iOS implementation in this version. (Android comes later)
- Loading system fonts with a fallback font using
  CTFontCopyDefaultCascadeListForLanguages() API, which is available
  iOS6.0~ and macOS10.8. This would limit an OS version coverage, but
  OK for Lullaby that supports iOS8~
- Add CGFontToSFNT() and misc helper to convert CGFont to SFNT.
- Remove redundant hb_buffer_clear_contents() added in 60a778d9.
- Open issue is:
  The system font (on macOS) loads 29 font files, 130 MB on memory,
  taking 300msec to load.
  Possible optimizations would be:
  - Construct glyph coverage map and doesn't load unnecessary fonts.
  - Load fonts on demands (ultimately has same issue when CJK font is needed).

Usage:
  fontman.Open(flatui::kSystemFont);
  fontman.SelectFont(flatui::kSystemFont);

Tested: on OSX.
Bug: b/30122638.
Change-Id: I95c3834c6e715969341ca0d95305658a3690c02c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ set(flatui_SRCS
     include/flatui/internal/micro_edit.h
     include/flatui/version.h
     src/font_manager.cpp
+    src/font_systemfont.cpp
     src/micro_edit.cpp
     src/flatui.cpp
     src/flatui_common.cpp
