--- a/test/unit_tests/serialization/CMakeLists.txt
+++ b/test/unit_tests/serialization/CMakeLists.txt
@@ -71,6 +71,7 @@ set(flatui_serialization_SRC
     ../mocks/flatui_common_mocks.cpp
     ../mocks/fplbase_mocks.cpp
     ../../../src/font_manager.cpp
+    ../../../src/font_systemfont.cpp
     ../../../src/glyph_cache.cpp
     ../../../src/hb_complex_font.cpp
     ../../../src/libpng_to_stbimage/pngshim.cpp
