Fix a build break in serialization_test on OSX.
Change-Id: I7a54641ea13803e85b2a94e8287053581a115bc9
Tested: on OSX.

--- a/test/unit_tests/serialization/CMakeLists.txt
+++ b/test/unit_tests/serialization/CMakeLists.txt
@@ -62,6 +62,12 @@ if(NOT MSVC)
   find_package(Threads)
 endif()
 
+# Add required frameworks on OSX.
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+set(CMAKE_EXE_LINKER_FLAGS
+    "-framework CoreFoundation -framework CoreGraphics -framework CoreText")
+endif()
+
 set(COMMON_LIBS "gtest;gmock;${CMAKE_THREAD_LIBS_INIT}")
 
 # Build test executable with mocks.
