Add AttirbutedFontBuffer support.
- Add an API to apend a contents to existing FontBuffer.
- Add GetAttributedBuffer() API with lambda to update font parameters
  while generating a FontBuffer.
- Add (temporary) sample to test the attributed fontbuffer feature.
- Once we have an API that accept HTML, I'm fine to remove the AttributedLabel() API
  from flatui.

Change-Id: I0743ae939637cf567760256f9d379a6037f6ffea
Tested: on OSX and on Android.

--- a/sample/text_attributed_label/CMakeLists.txt
+++ b/sample/text_attributed_label/CMakeLists.txt
@@ -13,11 +13,12 @@
 # limitations under the License.
 cmake_minimum_required(VERSION 2.8.12)
 
-add_subdirectory(animation)
-add_subdirectory(basic)
-add_subdirectory(sample_3d)
-add_subdirectory(serialization)
-add_subdirectory(sdf)
-add_subdirectory(text_attributed_label)
-add_subdirectory(text_layout)
-add_subdirectory(text_color_emoji)
+project(flatuisample_attributed_label)
+
+add_executable(flatuisample_attributed_label flatui_attributed_label.cpp)
+add_dependencies(flatuisample_attributed_label fplbase flatui)
+mathfu_configure_flags(flatuisample_attributed_label)
+target_link_libraries(flatuisample_attributed_label fplbase flatui)
+
+# FlatUI postprocess
+flatui_post_process(flatuisample_attributed_label "sample")
