Fixed sample assets being copied to the wrong directory.
Change-Id: Ie5bd54c8f655171f092e762aff7709ff60abd58f
Tested: on Linux.

--- a/sample/animation/CMakeLists.txt
+++ b/sample/animation/CMakeLists.txt
@@ -21,4 +21,4 @@ mathfu_configure_flags(flatuianim)
 target_link_libraries(flatuianim fplbase flatui)
 
 # FlatUI postprocess
-flatui_post_process(flatuianim "anim_sample")
+flatui_post_process(flatuianim "sample")
