Add function to create a FontBuffer from HTML.
Initial version only handles anchor tags.
Later versions will process underlining, both, italics, etc.
Eventually, we may want to add support for tables, but that
is more complicated.

Tested: Added new unit tests for HTML parsing, updated
sample to display HTML; passes on Mac and Linux.
Change-Id: If6c38ff2ad46fd3922d33777c8ea4e9d0c861054

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -18,6 +18,6 @@ add_subdirectory(basic)
 add_subdirectory(sample_3d)
 add_subdirectory(serialization)
 add_subdirectory(sdf)
-add_subdirectory(text_attributed_label)
+add_subdirectory(text_html_label)
 add_subdirectory(text_layout)
 add_subdirectory(text_color_emoji)
