--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,11 @@
 *.suo
 *.sdf
 
+apks/*
 bin/
 obj/
 docs/html/
-libs/
+libs/*
 gen/
 
 Makefile
@@ -27,6 +28,13 @@ CMakeLists.txt.user
 
 libflatui.a
 
+sample/*/assets/
+sample/*/build.xml
+sample/*/libs/
+sample/*/local.properties
+sample/*/proguard-project.txt
+sample/*/project.properties
+sample/*/src_java/
 sample/CMakeScripts/
 sample/CMakeFiles/
 sample/bin/
@@ -65,3 +73,10 @@ test/proguard-project.txt
 test/project.properties
 test/src_java/
 test/flatuitest.dir/
+test/unit_tests/*/assets/
+test/unit_tests/*/build.xml
+test/unit_tests/*/libs/
+test/unit_tests/*/local.properties
+test/unit_tests/*/proguard-project.txt
+test/unit_tests/*/project.properties
+test/unit_tests/*/src_java/
