Make flatui samples build on Google3 and Gerrit.
Modify BUILD file to add assets and build targets for flatui samples.
Make necessary changes to specific sample files to improve file structure for
building on both systems.
Edit CMakeLists file to build properly on Gerrit with these changes.
PiperOrigin-RevId: 139952678
Change-Id: Iec26532e0a974e3722a8425c593caf451bc0aaba

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,7 +214,17 @@ function(flatui_post_process target folder_name)
       COMMAND ${CMAKE_COMMAND} -E copy_directory
           ${dependencies_flatui_dir}/assets ${flatui_assets_dir}
       COMMAND ${CMAKE_COMMAND} -E copy_directory
-          ${dependencies_flatui_dir}/${folder_name}/assets ${flatui_assets_dir})
+          ${dependencies_flatui_dir}/${folder_name}/assets ${flatui_assets_dir}
+      COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${dependencies_flatui_dir}/schemas ${flatui_assets_dir}/schemas
+      COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${dependencies_flatui_dir}/sample/serialization/schemas ${flatui_assets_dir}/schemas
+      COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${dependencies_fplbase_dir}/schemas ${flatui_assets_dir}/schemas
+      COMMAND ${CMAKE_COMMAND} -E make_directory ${flatui_assets_dir}/serialization
+      COMMAND ${CMAKE_COMMAND} -E copy
+          ${dependencies_flatui_dir}/sample/serialization/first_menu.json ${flatui_assets_dir}/serialization
+          ${dependencies_flatui_dir}/sample/serialization/second_menu.json ${flatui_assets_dir}/serialization)
 endfunction()
 
 if(MSVC)
