Fix flatui asset copy for older versions of cmake.
Older versions of cmake only copy one file per "-E copy" command. The fix is to split our two file copy into two commands.
PiperOrigin-RevId: 141505160
Change-Id: Ibfad5e48458edbec65454f9b82994afe829ef6d7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -224,6 +224,7 @@ function(flatui_post_process target folder_name)
       COMMAND ${CMAKE_COMMAND} -E make_directory ${flatui_assets_dir}/serialization
       COMMAND ${CMAKE_COMMAND} -E copy
           ${dependencies_flatui_dir}/sample/serialization/first_menu.json ${flatui_assets_dir}/serialization
+      COMMAND ${CMAKE_COMMAND} -E copy
           ${dependencies_flatui_dir}/sample/serialization/second_menu.json ${flatui_assets_dir}/serialization)
 endfunction()
 
