--- a/sample/advanced/AndroidManifest.xml
+++ b/sample/advanced/AndroidManifest.xml
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.google.flatui.test"
+          package="com.google.flatui.sample.advanced"
           android:versionCode="1"
           android:versionName="1.0">
   <application android:label="@string/app_name"
