--- a/sample/text_html_label/AndroidManifest.xml
+++ b/sample/text_html_label/AndroidManifest.xml
@@ -21,6 +21,7 @@ limitations under the License.
                android:allowBackup="true"
                android:isGame="true"
                android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+    <meta-data android:name="android.app.lib_name" android:value="text_html_label" />
     <activity android:name="com.google.fpl.fplbase.FPLActivity"
               android:label="@string/app_name"
               android:screenOrientation="landscape"
