--- a/sample/corgui/AndroidManifest.xml
+++ b/sample/corgui/AndroidManifest.xml
@@ -24,7 +24,7 @@ limitations under the License.
     <meta-data android:name="android.app.lib_name" android:value="corgui" />
     <activity android:name="com.google.fpl.fplbase.FPLActivity"
               android:label="@string/app_name"
-              android:screenOrientation="landscape"
+              android:screenOrientation="portrait"
               android:configChanges="orientation|keyboardHidden|screenSize">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,7 @@ limitations under the License.
     </activity>
     <activity android:name="com.google.fpl.fplbase.FPLTvActivity"
               android:label="@string/app_name"
-              android:screenOrientation="landscape"
+              android:screenOrientation="portrait"
               android:configChanges="orientation|keyboardHidden|screenSize">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
