--- a/sample/corgui/AndroidManifest.xml
+++ b/sample/corgui/AndroidManifest.xml
@@ -18,6 +18,7 @@ limitations under the License.
           android:versionCode="1"
           android:versionName="1.0">
   <application android:label="@string/app_name"
+               android:icon="@drawable/ic_launcher"
                android:allowBackup="true"
                android:isGame="true"
                android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
